# rust-stt

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.pi/plans/: feat-minutes-generator.md
docs/: audio-processing.md  minutes.md  summarizer.md  transcription.md  ui.md
src/: lib.rs  main.rs
src/audio_processor/: filters.rs  mod.rs
src/converter/: mod.rs
src/minutes/: llm.rs  mod.rs  prompt.rs
src/summarizer/: llm.rs  matcher.rs  mod.rs  vtt.rs
src/transcriber/: azure.rs  azure_speech.rs  mod.rs
src/ui/: app_state.rs  mod.rs  panel_config.rs  panel_costs.rs  panel_files.rs  panel_progress.rs  panel_result.rs  pipeline_runner.rs
