[package]
name = "rust-stt"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pipeline"
path = "src/main.rs"

[[bin]]
name = "transcribe"
path = "src/bin/transcribe.rs"

[[bin]]
name = "summarize"
path = "src/bin/summarize.rs"

[[bin]]
name = "minutes"
path = "src/bin/minutes.rs"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[dependencies]
reqwest  = { version = "0.12", features = ["blocking", "multipart", "json"] }
serde    = { version = "1",    features = ["derive"] }
serde_json = "1"
dotenvy  = "0.15"
eframe = "0.29"
egui = "0.29"
rfd = "0.15"
dirs = "5"
